# EDGETEST_AI

./: .env.example  .gitignore  README.md  cli.py  docker-compose.yml  document.md  generate_pdf.py  generate_source_pdf.py  index.html  pyproject.toml  test-workflow.yml
.github/workflows/: edgetest.yml
backend/: Dockerfile.sandbox  Dockerfile.sandbox.cpp  Dockerfile.sandbox.dotnet  Dockerfile.sandbox.jvm  alembic.ini  auth.py  cli_runner.py  config.py  database.py  main.py  models.py  module_graph.py  parser.py  requirements.txt  sandbox.py  schemas.py  tasks.py
backend/alembic/: env.py
backend/chains/: __init__.py  autofix.py  base.py  codegen.py  completeness.py  coverage_extract.py  discovery.py  eligibility.py  framework_detect.py  pseudocode.py  risk_scoring.py  story_to_tests.py
backend/routers/: __init__.py  analyze.py  auth.py  export.py  ingest.py  metrics.py  report.py  sandbox.py  story.py
backend/services/: autofix_runner.py  coverage_gate.py  test_classifier.py  test_validator.py
backend/templates/: github_actions.yml.j2  github_actions_csharp.yml.j2  github_actions_java.yml.j2  report.html.j2
backend/tests/: test_auth_bypass.py  test_authz.py  test_eligibility.py  test_generate_integration_route.py  test_smoke.py  test_test_classifier.py
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatbotAssistant.tsx  CompletenessPanel.tsx  EligibilityBanner.tsx  EvaluationPanel.tsx  LogoIcon.tsx  PseudocodePanel.tsx  ScenarioSelector.tsx  (+3 more)
nginx/: nginx.conf
(+29 files in other folders)
